<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:padding="10dp"
    tools:context="com.tradeassistant1c77.LoginActivity">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/edtuseridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/edtpassLyout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <EditText
            android:id="@+id/edtuserid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/la_login_hint"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/edtpassLyout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52"
        app:layout_constraintHorizontal_bias="0.503">
        <EditText
            android:id="@+id/edtpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/la_password_hint"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btnlogin"
        android:layout_width="213dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:text="@string/la_btn_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtpassLyout" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/la_btn_preference"
        android:id="@+id/preferenceBtn"
        app:layout_constraintRight_toRightOf="@+id/btnlogin"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin"
        style="@style/ButtonBorderless"
        android:layout_marginTop="13dp" />

    <ImageView
        android:layout_width="85dp"
        android:layout_height="79dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_launcher_1c_big"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/edtuseridLayout"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintHorizontal_bias="0.501"
        android:contentDescription="@string/logoDescription"/>


</android.support.constraint.ConstraintLayout>
