<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/progressContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/initPB"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <ScrollView
            android:id="@+id/sw"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_margin="18dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="4dp">

                <Button
                    android:id="@+id/procFuncCreateBtn"
                    style="@style/ButtonColored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:text="@string/button_create_all" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/indexesBtn"
                        style="@style/ButtonColoredSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/indexes_all" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:height="54dp"
                        android:gravity="center_vertical"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:text="@string/index_group_name"
                        android:textColor="@color/subheader" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/indexes_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/udfsBtn"
                        style="@style/ButtonColoredSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/udfs_all" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:height="54dp"
                        android:gravity="center_vertical"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:text="@string/udf_group_name"
                        android:textColor="@color/subheader" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/udfs_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/spsBtn"
                        style="@style/ButtonColoredSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/sps_all" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:height="54dp"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:text="@string/sp_group_name"
                        android:textColor="@color/subheader" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/sps_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />

            </LinearLayout>

        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>